--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         // ========== 初始弹窗配置（单独编辑） ==========
         const INIT_POPUP_CONFIG = {
             title: "✨ 温馨提示 ✨",       // 弹窗标题
-            content: "吉嘉楠\n准备好接收满满的温暖啦～", // 弹窗内容
+            content: "准备好接收满满的温暖啦～", // 弹窗内容
             showTime: 2000                // 弹窗显示时长（毫秒，2000=2秒）
         };
 
